# app/http/swagger/swagger.json
@@ -1,65 +1,50 @@
 {
     "swagger": "2.0",
     "info": {
-        "description": "hade测试",
-        "title": "hade",
+        "description": "hade论坛",
+        "title": "hadecast",
         "termsOfService": "https://github.com/swaggo/swag",
         "contact": {
-            "name": "yejianfeng1",
-            "email": "yejianfeng"
+            "name": "jianfengye",
+            "email": "jianfengye"
         },
         "license": {
             "name": "Apache 2.0",
             "url": "http://www.apache.org/licenses/LICENSE-2.0.html"
         },
-        "version": "1.1"
+        "version": "1.0"
     },
     "basePath": "/",
     "paths": {
-        "/demo/demo": {
-            "get": {
-                "description": "获取所有用户",
+        "/user/login": {
+            "post": {
+                "description": "用户登录接口",
+                "consumes": [
+                    "application/json"
+                ],
                 "produces": [
                     "application/json"
                 ],
                 "tags": [
-                    "demo"
+                    "user"
                 ],
-                "summary": "获取所有用户",
-                "responses": {
-                    "200": {
-                        "description": "OK",
+                "summary": "用户登录",
+                "parameters": [
+                    {
+                        "description": "login with param",
+                        "name": "loginParam",
+                        "in": "body",
+                        "required": true,
                         "schema": {
-                            "type": "array",
-                            "items": {
-                                "type": "array",
-                                "items": {
-                                    "$ref": "#/definitions/demo.UserDTO"
-                                }
-                            }
+                            "$ref": "#/definitions/user.loginParam"
                         }
                     }
-                }
-            }
-        },
-        "/demo/demo2": {
-            "get": {
-                "description": "获取所有学生,不进行分页",
-                "produces": [
-                    "application/json"
                 ],
-                "tags": [
-                    "demo"
-                ],
-                "summary": "获取所有学生",
                 "responses": {
                     "200": {
-                        "description": "OK",
+                        "description": "token",
                         "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/demo.UserDTO"
-                            }
+                            "type": "string"
                         }
                     }
                 }
@@ -67,13 +52,17 @@
         }
     },
     "definitions": {
-        "demo.UserDTO": {
+        "user.loginParam": {
             "type": "object",
+            "required": [
+                "password",
+                "username"
+            ],
             "properties": {
-                "id": {
-                    "type": "integer"
+                "password": {
+                    "type": "string"
                 },
-                "name": {
+                "username": {
                     "type": "string"
                 }
             }
